--- a/package.json
+++ b/package.json
@@ -32,13 +32,14 @@
     "yup": "^1.7.1"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.22",
-    "postcss": "^8.5.6",
     "@types/node": "^24",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
+    "autoprefixer": "^10.4.22",
     "eslint": "^9.39.1",
     "eslint-config-next": "16.0.4",
+    "postcss": "^8.5.6",
+    "postcss-nesting": "^13.0.2",
     "tailwindcss": "^4.1.17",
     "typescript": "^5"
   }
