--- a/sistema-recuperado/package.json
+++ b/sistema-recuperado/package.json
@@ -34,7 +34,8 @@
     "react-hook-form": "^7.66.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
-    "yup": "^1.7.1"
+    "yup": "^1.7.1",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@types/node": "^20",
