--- a/sistema-recuperado/package.json
+++ b/sistema-recuperado/package.json
@@ -32,6 +32,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.1",
+    "recharts": "^3.6.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "yup": "^1.7.1",
