--- a/sistema-recuperado/package.json
+++ b/sistema-recuperado/package.json
@@ -31,6 +31,8 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.26",
     "isomorphic-dompurify": "^2.35.0",
+    "jspdf": "^4.0.0",
+    "jspdf-autotable": "^5.0.7",
     "lucide-react": "^0.554.0",
     "next": "16.0.3",
     "pino": "^10.2.0",
